# ddlcdecrypt

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
ddlcdecrypt/: cli.py  crypto.py
