[tool.poetry]
name = "ddlcdecrypt"
version = "0.1.0"
description = "Simple tool to decrypt DDLC Plus! UnityFS files."
license = "MIT"
authors = ["Nemris <nemris@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
